methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:10: error: unclosed comment
    /*forward();
    ^MethodsDogHouse:10: error: unclosed comment
    /*forward();
    ^MethodsDogHouse:10: error: unclosed comment
    /*forward();
    ^MethodsDogHouse:10: error: unclosed comment
    /*forward();
    ^MethodsDogHouse:10: error: unclosed comment
    /*forward();
    ^MethodsDogHouse:10: error: unclosed comment
    /*forward();
    ^MethodsDogHouse:1: error: Missing closing brace `}' assumed here
var x=0
^MethodsDogHouse:1: error: expected class or object definition
var x=0
^MethodsDogHouse:2: error: expected class or object definition
def dogHouse() {
^MethodsDogHouse:10: error: unclosed comment
    /*forward();
    ^MethodsDogHouse:47: error: Missing closing brace `}' assumed here
}
 ^MethodsDogHouse:47: error: Missing closing brace `}' assumed here
}
 ^MethodsDogHouse:47: error: Missing closing brace `}' assumed here
}
 ^